// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CoverImage/> should render img, when link does not exist 1`] = `
<div
  class="cover cover--inverse"
>
  <a
    href="/url"
  >
    <img
      class="cover__thumbnail"
      src="no-image-found.jpg"
    />
    <div
      class="cover__overlay"
    >
      <strong
        class="cover__overlay__title"
      >
        title
      </strong>
      <em
        class="cover__overlay__rating"
      >
        ⭐️: 3/10
      </em>
    </div>
  </a>
</div>
`;

exports[`<CoverImage/> should render img, when link exists 1`] = `
<div
  class="cover "
>
  <a
    href="/url"
  >
    <img
      class="cover__thumbnail"
      src="https://example.com/test.jpg"
    />
    <div
      class="cover__overlay"
    >
      <strong
        class="cover__overlay__title"
      >
        title
      </strong>
      <em
        class="cover__overlay__rating"
      >
        ⭐️: 5/10
      </em>
    </div>
  </a>
</div>
`;
